@@ -30,7 +30,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$Id: dump.8.in,v 1.3 1999/10/13 09:57:19 stelian Exp $
+.\"	$Id: dump.8.in,v 1.4 1999/10/30 22:55:51 tiniou Exp $
 .\"
 .Dd __DATE__
 .Dt DUMP 8
@@ -380,6 +380,13 @@ The environment variable
 will be used to determine the pathname of the remote
 .Xr rmt 8
 program.
+.It Ev RSH
+.Nm Dump
+uses the contents of this variable to determine the name of the
+remote shell command to use when doing remote backups (rsh, ssh etc.). 
+If this variable is not set, 
+.Xr rcmd 3
+will be used, but only root will be able to do remote backups.
 .Sh FILES
 .Bl -tag -width __DUMPDATES__ -compact
 .It Pa /dev/st0
@@ -437,10 +444,10 @@ for the operator running
 .Pp
 .Nm Dump
 cannot do remote backups without being run as root, due to its
-security history.  This will be fixed in a later version of
-.Bx Free .
+security history.
 Presently, it works if you set it setuid (like it used to be), but this
-might constitute a security risk.
+might constitute a security risk. Note that you can set RSH to use
+a remote shell program instead.
 .Sh AUTHOR
 The 
 .Nm dump/restore
