@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$Id: restore.8.in,v 1.3 1999/10/13 09:57:21 stelian Exp $
+.\"	$Id: restore.8.in,v 1.4 1999/10/30 22:55:51 tiniou Exp $
 .\"
 .Dd __DATE__
 .Dt RESTORE 8
@@ -478,6 +478,13 @@ The environment variable
 will be used to determine the pathname of the remote
 .Xr rmt 8
 program.
+.It Ev RSH
+.Nm Restore
+uses the contents of this variable to determine the name of the
+remote shell command to use when doing a network restore (rsh, ssh etc.).
+If this variable is not set,
+.Xr rcmd 3
+will be used, but only root will be able to do a network restore.
 .Sh FILES
 .Bl -tag -width "./restoresymtable" -compact
 .It Pa /dev/st0
@@ -530,7 +537,8 @@ In all other cases, the files are unique because it is possible to
 have two different dumps started at the same time, and separate
 operations shouldn't conflict with each other.
 .Pp
-To do a network restore, you have to run restore as root.  This is due
+To do a network restore, you have to run restore as root or use
+a remote shell replacement (see RSH variable).  This is due
 to the previous security history of dump and restore.  (restore is
 written to be setuid root, but we are not certain all bugs are gone
 from the restore code - run setuid at your own risk.)
